Revert to working Docker Image